Fixed map not showing for old listings

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -115,7 +115,7 @@ text-decoration: none;
 
 
 #map{
-    width: 90vh;
+    width: 80vh;
     height: 400px;
     border-radius: 0.5rem;
 }
